# dulayni-client

./: .gitignore  README.md  main.py  pyproject.toml  test.py
src/dulayni/: __init__.py  cli.py  client.py  config_templates.py  exceptions.py  frpc_templates.py  init.py
src/dulayni/auth/: __init__.py  authenticator.py  init.py  session.py
src/dulayni/config/: __init__.py  init.py  manager.py  templates.py
src/dulayni/infrastructure/: __init__.py  docker.py  frpc.py  git.py  init.py
src/dulayni/mcp/: filesystem.py  start.py
src/dulayni/project/: __init__.py  init.py  initializer.py  validator.py
src/dulayni/templates/: __init__.py  frpc_templates.py
src/dulayni_client/: __init__.py  cli.py  client.py  exceptions.py
src/dulayni_client/mcp/: filesystem.py  start.py
