[project]
name = "dulayni"
version = "0.1.0"
description = "CLI client and library for interacting with dulayni RAG agents via API"
readme = "README.md"
authors = [
    { name = "moctarjallo", email = "moctar.diallo@kajande.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "black>=25.1.0",
    "click>=8.2.1",
    "fastmcp>=2.11.3",
    "ipdb>=0.13.13",
    "psutil>=7.0.0",
    "requests>=2.31.0",
    "rich>=14.0.0",
]

[project.scripts]
dulayni = "dulayni.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
target-version = "py312"
line-length = 88
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
